--- a/termux.properties
+++ b/termux.properties
@@ -9,7 +9,7 @@
 ### Allow external applications to execute arbitrary commands within Termux.
 ### This potentially could be a security issue, so option is disabled by
 ### default. Uncomment to enable.
-# allow-external-apps = true
+allow-external-apps = true
 
 ### Default working directory that will be used when launching the app.
 # default-working-directory = /data/data/com.termux/files/home
@@ -26,7 +26,7 @@ disable-terminal-session-change-toast = true
 
 ### Adjust terminal scrollback buffer. Max is 50000. May have negative
 ### impact on performance.
-# terminal-transcript-rows = 2000
+terminal-transcript-rows = 10000
 
 ### Uncomment to use volume keys for adjusting volume and not for the
 ### extra keys functionality.
@@ -51,7 +51,7 @@ fullscreen = true
 # terminal-cursor-blink-rate = 0
 
 ### Cursor style: block, bar, underline.
-# terminal-cursor-style = block
+terminal-cursor-style = bar
 
 ###############
 # Extra keys
@@ -68,22 +68,21 @@ fullscreen = true
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
 ### Two rows with more keys
-# extra-keys = [['ESC','/','-','HOME','UP','END','PGUP'], \
-#               ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN']]
+# extra-keys = [['ESC','/','-','HOME','UP','END','PGUP'], ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN']]
 
 ### Configuration with additional popup keys (swipe up from an extra key)
-# extra-keys = [[ \
-#   {key: ESC, popup: {macro: "CTRL f d", display: "tmux exit"}}, \
-#   {key: CTRL, popup: {macro: "CTRL f BKSP", display: "tmux ←"}}, \
-#   {key: ALT, popup: {macro: "CTRL f TAB", display: "tmux →"}}, \
-#   {key: TAB, popup: {macro: "ALT a", display: A-a}}, \
-#   {key: LEFT, popup: HOME}, \
-#   {key: DOWN, popup: PGDN}, \
-#   {key: UP, popup: PGUP}, \
-#   {key: RIGHT, popup: END}, \
-#   {macro: "ALT j", display: A-j, popup: {macro: "ALT g", display: A-g}}, \
-#   {key: KEYBOARD, popup: {macro: "CTRL d", display: exit}} \
-# ]]
+extra-keys = [[ \
+   {key: ESC, popup: TAB}, \
+   {key: CTRL, popup: ALT}, \
+   {macro: "SPACE f s", display: "Save", popup: ":"}, \
+   {key: "/", popup: "~"}, \
+   {key: "-", popup: "|"}, \
+   {key: LEFT, popup: HOME}, \
+   {key: DOWN, popup: PGDN}, \
+   {key: UP, popup: PGUP}, \
+   {key: RIGHT, popup: END}, \
+   {key: KEYBOARD, popup: {macro: "CTRL d", display: exit}} \
+ ]]
 
 ###############
 # Colors/themes
